<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.administrar.ModuloComunicacionActivity">


    <include layout="@layout/actionbar_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/vertical_margin">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edittext_margin"
                android:theme="@style/EditTextBlack">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_servidor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tv_servidor"
                    android:singleLine="true"
                    />
            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="@color/grey" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_tipoApp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="13sp" />





            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10"
                >

                <EditText
                    android:id="@+id/et_tipo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="Entrada"
                    android:editable="false"
                    android:enabled="false"

                    >
                </EditText>

                <Button
                    android:id="@+id/button_tipo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/bt_cambiarTipo"
                    android:theme="@style/RaisedButtonDark"
                    android:drawablePadding="8dp"
                    />


            </LinearLayout>



            <Button
                android:id="@+id/button_guardar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bt_guardar"
                android:theme="@style/RaisedButtonDark"
                android:drawablePadding="8dp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="@color/grey" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="10"
                android:layout_centerInParent="true"
                >

                <EditText
                    android:id="@+id/et_comunicacion"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:ems="10"
                    android:text="@string/tv_comunicacion"
                    android:gravity="start|top"
                    android:inputType="textMultiLine"
                    android:editable="false"
                    android:enabled="false"
                    />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:orientation="vertical"
                    >

                    <Button
                        android:id="@+id/button_probar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/bt_probar"
                        android:theme="@style/RaisedButtonDark"
                        android:drawablePadding="8dp"
                        />

                    <Button
                        android:id="@+id/button_recibir"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/bt_descargarBD"
                        android:theme="@style/RaisedButtonDark"
                        android:drawablePadding="8dp"
                        />

                    <Button
                        android:id="@+id/button_salir"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/bt_regresar"
                        android:theme="@style/RaisedButtonDark"
                        android:drawablePadding="8dp"
                        android:onClick="salir"
                        />

                </LinearLayout>




            </LinearLayout>




        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>